# ar-tu-do

./: .gitmodules  README.md
ros_ws/launch/: car_navigation_stack.launch  car_teleop.launch  car_wallfollowing.launch
ros_ws/src/car_control/include/: car_controller.h  drive_parameters_multiplexer.h
ros_ws/src/car_control/src/: car_controller.cpp  drive_parameters_multiplexer.cpp
ros_ws/src/drive_msgs/msg/: drive_param.msg
ros_ws/src/external_packages/vesc/vesc_ackermann/: CMakeLists.txt
ros_ws/src/external_packages/vesc/vesc_ackermann/include/vesc_ackermann/: vesc_to_odom.h
ros_ws/src/external_packages/vesc/vesc_ackermann/src/: vesc_to_odom.cpp
ros_ws/src/external_packages/vesc/vesc_driver/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
ros_ws/src/external_packages/vesc/vesc_msgs/msg/: VescState.msg
ros_ws/src/hardware/: package.xml
ros_ws/src/navigation_stack/car_cartographer/: package.xml
ros_ws/src/navigation_stack/navigation_stack_config/: package.xml
ros_ws/src/navigation_stack/navigation_stack_control_converter/: CMakeLists.txt
ros_ws/src/navigation_stack/navigation_stack_control_converter/src/: navigation_stack_control_converter.cpp
ros_ws/src/simulation/racer_world/: package.xml
ros_ws/src/simulation/vesc_sim/config/: car_config.yaml
ros_ws/src/simulation/vesc_sim/include/: car_config.h
ros_ws/src/simulation/vesc_sim/src/: params_to_yaml.cpp
ros_ws/src/teleoperation/: CMakeLists.txt
ros_ws/src/teleoperation/cfg/: joystick_controller.cfg
ros_ws/src/teleoperation/include/: joystick_controller.h
ros_ws/src/teleoperation/launch/: remote_control.launch
ros_ws/src/teleoperation/src/: joystick_controller.cpp
(+4 files in other folders)
